--- a/templates/error.ejs
+++ b/templates/error.ejs
@@ -183,7 +183,9 @@
 </style>
 
 <body>
-    <div class="navbarposition" style="width: 100%; background-image: linear-gradient(to bottom right, red, yellow);">
+    <div class="navbarposition" style="background-image: linear-gradient(to left, black,white);";
+    width: 100%;
+    z-index: 1;>
         <%- include("partials/navbar.ejs") %>
     </div>
 
