--- a/templates/eventredirect.ejs
+++ b/templates/eventredirect.ejs
@@ -79,9 +79,9 @@
 </style>
 
 <body>
-    <div class="navbarposition" style="background-color: #dada1a;
+    <div class="navbarposition" style="background-image: linear-gradient(to left, black,white);";
     width: 100%;
-    z-index: 1;; ">
+    z-index: 1;>
         <%- include("partials/navbar.ejs") %>
     </div>
 
