--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,8 +1,8 @@
-body {
+/* body {
     min-height: 100vh;
-}
+} */
 
-.info {
+/* .info {
     color: rgb(255, 255, 255);
     z-index: 1;
     width: 30%;
@@ -15,26 +15,26 @@ body {
     background-color: rgba(0, 0, 0, 0.5);
     flex-direction: column;
     justify-content: center;
-}
+} */
 
-.info p {
+/* .info p {
     margin: 0px 30px;
     font-size: 15px;
-}
+} */
 
 .conti {
     display: flex;
     flex-direction: column;
     width: 100%;
     height: 100vh;
+    /* border: 2px solid red; */
+    margin-bottom: 10px;
 }
 
-@media only screen and (max-width:800px) {
+/* @media only screen and (max-width:800px) {
     .info {
         width: 100% !important;
         font-size: 15px;
-        /* transform: translateY(315px) !important;
-        height: 311px; */
     }
     .title {
         margin: 100px auto !important;
@@ -42,9 +42,9 @@ body {
         align-items: center !important;
     }
 
-}
+} */
 
-@media only screen and (max-width:550px){
+/* @media only screen and (max-width:550px){
     .info p{
         font-size: 13px;
 
@@ -52,8 +52,8 @@ body {
     .info h2{
         font-size: 15px;
     }
-}
-@media only screen and (max-width:450px){
+} */
+/* @media only screen and (max-width:450px){
     .info p{
         font-size: 11px;
 
@@ -61,9 +61,9 @@ body {
     .info h2{
         font-size: 9px;
     }
-}
+} */
 
-@media only screen and (max-width:450px){
+/* @media only screen and (max-width:450px){
     .title h1{
         font-size: 2.3rem !important;
     }
@@ -76,9 +76,9 @@ body {
     .info {
         width: 40%;
     }
-}
+} */
 
-.contact {
+/* .contact {
     width: 250px;
     height: 180px;
     display: flex;
@@ -88,9 +88,9 @@ body {
     color: black !important;
     margin: 0px 10px;
     border-radius: 20px;
-}
+} */
 
-#contact {
+/* #contact {
     display: flex;
     width: 100%;
     margin: 30px auto;
@@ -140,5 +140,5 @@ body {
         width: 90%;
     }
 
-}
+} */
 
