--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -15,7 +15,7 @@
   .line {
     width: 20px;
     height: 2px;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
     margin-top: 3px;
   }
 
@@ -27,40 +27,36 @@
     margin: 0px 5px;
     border-radius: 0px;
     transition: all 0s;
+    color: white;
   }
 
   .navitem:hover {
     text-decoration: underline;
-    color: black;
+    color: rgb(255, 213, 0);
   }
 
 
 
+
+
   @media only screen and (max-width:992px) {
-    .collapse {
-      position: unset;
+    .collapse{
+      position: absolute;
+      right: 0 !important;
+      width: 250px !important;
+      background: white;
+      top: 100%;
+      z-index: 10000;
+      height: 100vh;
+      padding: 10px;
     }
-/* 
-    .navbar{
-      background-color: #dada1a;
-    } */
     .navitem{
       color: black;
-    }
-
-    .navbar-brand {
-      margin: unset;
-    }
-    .navitem{
-      width: 30%;
       text-align: center;
     }
-
     .navitem:hover {
-      background-color: yellow;
-      color: black !important;
-      border-radius: 10px;
-      transition: all 0s;
+      text-decoration: underline;
+      color: rgb(255, 213, 0);
     }
   }
 
