--- a/static/css/ourteam.css
+++ b/static/css/ourteam.css
@@ -13,7 +13,7 @@
     /* border: 2px solid rgb(0, 0, 0); */
     height: 300px;
     width: 250px;
-    margin: 10px;
+    margin: 20px;
     border-radius: 10px;
     display: flex;
     justify-content: center;
@@ -120,54 +120,12 @@
     flex-wrap: wrap;
 }
 
-body {
+/* body {
     background: url('https://img.freepik.com/premium-vector/abstract-technology-background_41981-1248.jpg?w=2000') no-repeat center center/cover;
     background-attachment: fixed;
-}
+} */
 
 html,
 body {
     overflow-x: hidden;
-}
-
-.titlebox {
-    width: 100%;
-    /* height: 350px;
-    background-color: #0000006e;
-    color: white;
-    transform: skew(0deg, -4.5deg) translate(-101px,-100px);
-    z-index: -1;
-    display: flex;
-    justify-content: center;
-    align-items: center; */
-}
-
-.titlebox h1 {
-    /* transform: skew(-8deg, 5deg); */
-    color: rgb(0, 0, 0);
-    /* margin-left: -240px; */
-    font-size: 3rem;
-    font-weight: bold;
-    margin-top: 50px;
-}
-
-.title {
-    text-transform: uppercase;
-    font-size: 2rem;
-}
-
-@media only screen and (max-width:650px) {
-    .titlebox {
-        width: 150% !important;
-    }
-
-    .titlebox h1 {
-        font-size: 35px !important;
-        margin:100px auto 0px auto !important    
-    }
-
-    .title h1 {
-        font-size: 23px;
-
-    }
 }
