--- a/templates/OurTeam.ejs
+++ b/templates/OurTeam.ejs
@@ -18,24 +18,44 @@
 </head>
 
 <style>
-.navitem {
-    color: rgb(0, 0, 0) ;
-}
+    .navitem {
+        color: rgb(255, 255, 255);
+    }
+
+    .entry {
+        background: url('https://img.freepik.com/premium-photo/abstract-green-turquoise-texture-background-vintage-grunge-green-backdrop-aesthetic-creative-design_364465-203.jpg?w=1060')no-repeat center center/cover;
+        background-attachment: fixed;
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .titled {
+        color: rgb(255, 255, 255);
+        font-size: 8rem;
+
+    }
+    .title{
+        font-size: 2rem;
+        text-transform: uppercase;
+    }
 </style>
 
 <body>
-    <div class="navbarposition" style=" width: 100%;background-color: white;">
+    <div class="navbarposition" style="background-image: linear-gradient(to left, black,white);" ; width: 100%; z-index:
+        1;>
         <%- include("partials/navbar.ejs") %>
     </div>
 
-    <div class="titlebox" style="text-align: center;">
-        <h1>
-            NIRMAAN TEAM
-        </h1>
+    <div class="entry">
+        <div class="titled">
+            NIRMAAN-TEAM
+        </div>
     </div>
-
-    <div class="sitewarp"
-        style="padding-bottom:40px">
+    <br><br><br>
+    <div class="sitewarp" style="padding-bottom:40px">
         <div class="cont">
             <% for(let team in teams){%>
                 <div class="title">
@@ -78,27 +98,27 @@
                                                             class="fa fa-facebook-f"></i></a>
                                                 </li>
                                                 <%}%>
-                                                <% if(teams[team][i].linkedinlink!="" ){%>
-                                                    <li class="nav-item"><a style="color:black ;" target="_blank"
-                                                            href="<%=teams[team][i].linkedinlink%>"
-                                                            class="nav-link"><i
-                                                                class="fa fa-linkedin"></i></a>
-                                                    </li>
-                                                    <%}%>
-                                                <% if(teams[team][i].twitter!="" ){%>
-                                                    <li class="nav-item"><a style="color:black ;" target="_blank"
-                                                            href="<%=teams[team][i].twitter%>"
-                                                            class="nav-link"><i
-                                                                class="fa fa-twitter"></i></a>
-                                                    </li>
-                                                    <%}%>
-                                            </ul>
+                                                    <% if(teams[team][i].linkedinlink!="" ){%>
+                                                        <li class="nav-item"><a style="color:black ;" target="_blank"
+                                                                href="<%=teams[team][i].linkedinlink%>"
+                                                                class="nav-link"><i class="fa fa-linkedin"></i></a>
+                                                        </li>
+                                                        <%}%>
+                                                            <% if(teams[team][i].twitter!="" ){%>
+                                                                <li class="nav-item"><a style="color:black ;"
+                                                                        target="_blank"
+                                                                        href="<%=teams[team][i].twitter%>"
+                                                                        class="nav-link"><i
+                                                                            class="fa fa-twitter"></i></a>
+                                                                </li>
+                                                                <%}%>
+                                </ul>
                             </div>
-
                         </div>
-                        <%}%>
 
-                </div>
+                        <%}%>
+                    </div>
+                    <br>
                 <%}%>
 
 
@@ -109,8 +129,7 @@
 
 
 
-    <div class="footerposition"
-        style="position: absolute; width: 100%; background-color: black;">
+    <div class="footerposition" style="position: absolute; width: 100%; background-color: black;">
         <%- include("partials/footer.ejs") %>
     </div>
 </body>
