--- a/templates/partials/footer.ejs
+++ b/templates/partials/footer.ejs
@@ -1,14 +1,7 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-  .nav a {
-    color: white;
-  }
+<link rel="stylesheet" href="/css/footer.css">
 
-  .nav a:hover {
-    color: yellow;
-  }
-</style>
-<footer style="color:white ;">
+<footer>
   <ul class="nav justify-content-center" style="font-size:30px;">
     <li class="nav"><a target="_blank" href="https://www.instagram.com/nirmaan_iitmandi/" class="nav-link   "><i
           class="fa fa-instagram"></i></a>
@@ -29,7 +22,8 @@
   <p style="font-size: 20px" class="text-center">Nirmaan Club | <a target="_blank" style="color: yellow;"
       href="https://iitmandi.co.in/">SNTC</a> | IIT-Mandi</p>
 </footer>
-<script src="/js/style.js"></script>
+
+<!-- link of bootstrap -->
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
   integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
