--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,144 +1,122 @@
-/* body {
-    min-height: 100vh;
-} */
-
-/* .info {
-    color: rgb(255, 255, 255);
-    z-index: 1;
-    width: 30%;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    transform: translateX(-500px);
-    opacity: 0;
-    transition: all 0.8s ease;
-    background-color: rgba(0, 0, 0, 0.5);
-    flex-direction: column;
-    justify-content: center;
-} */
-
-/* .info p {
-    margin: 0px 30px;
-    font-size: 15px;
-} */
-
-.conti {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    height: 100vh;
-    /* border: 2px solid red; */
-    margin-bottom: 10px;
+#video {
+    position: absolute;
+    z-index: -10;
+    object-fit: cover;
+    left: 0;
+    right: 0;
+    overflow: hidden;
 }
 
-/* @media only screen and (max-width:800px) {
-    .info {
-        width: 100% !important;
-        font-size: 15px;
-    }
-    .title {
-        margin: 100px auto !important;
-        justify-content: flex-start !important;
-        align-items: center !important;
-    }
-
-} */
-
-/* @media only screen and (max-width:550px){
-    .info p{
-        font-size: 13px;
-
-    }
-    .info h2{
-        font-size: 15px;
-    }
-} */
-/* @media only screen and (max-width:450px){
-    .info p{
-        font-size: 11px;
-
-    }
-    .info h2{
-        font-size: 9px;
-    }
-} */
-
-/* @media only screen and (max-width:450px){
-    .title h1{
-        font-size: 2.3rem !important;
-    }
-    .title span{
-        font-size: 1.3rem !important;
-    }
-}
-
-@media only screen and (max-width:900px) {
-    .info {
-        width: 40%;
-    }
-} */
-
-/* .contact {
-    width: 250px;
-    height: 180px;
-    display: flex;
-    align-items: center;
-    border: 2px solid black;
-    justify-content: center;
-    color: black !important;
-    margin: 0px 10px;
-    border-radius: 20px;
-} */
-
-/* #contact {
-    display: flex;
+#video video {
     width: 100%;
-    margin: 30px auto;
-    justify-content: center;
+    object-fit: cover;
+    height: 626px;
 }
 
 .title {
-    height: 100vh;
-    width: 70%;
-    margin: auto;
-    z-index: 0;
-    position: absolute;
-    left: 0;
-    right: 0;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    flex-direction: column;
+    width: 100%;
+    z-index: 1;
+    text-align: center;
+
 }
 
 .title h1 {
-    font-size: 4rem;
     color: rgb(255, 255, 255);
-    text-transform: uppercase;
-    text-shadow: 2px 2px 10px yellow;
+    font-size: 7rem;
+    height: 575px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
 }
 
-.title span {
-    color: rgb(255, 255, 255);
-    font-size: 2.3rem;
-    text-shadow: 2px 2px 10px yellow;
+h2,
+p {
+    color: black;
 }
 
-@media only screen and (max-width:1200px) {
-    .title h1 {
-        font-size:4rem ;
-    }
-    .title{
-        width: 80%;
-    }
+
+#info p {
+    font-size: 17.5px;
 }
-@media only screen and (max-width:1000px) {
-    .title h1 {
-        font-size:3rem ;
+
+#info {
+    width: 100%;
+    margin: 50px auto;
+    padding: 20px;
+    text-align: center;
+}
+
+.upcomming {
+    text-align: center;
+    margin: 50px auto;
+    width: 100%;
+    padding: 20px;
+}
+
+.upcomming .card {
+    width: 250px;
+    margin: 20px;
+    border-radius: 20px;
+    min-height: 300px;
+    box-shadow: 0px 0px 31px -8px grey;
+}
+
+.card img {
+    border-radius: 20px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+}
+
+.section {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.card span {
+    color: black;
+    font-weight: 600;
+}
+
+.card .about {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+footer p {
+    color: white;
+}
+h1,h2,h3,h4,h5{
+    color: black;
+}
+
+.section img{
+    width:300px;
+    height: 180px;
+}
+
+.navbarposition {
+    background-image: linear-gradient(to left, black, white);
+    width: 100%;
+    z-index: 1;
+}
+
+.footerposition {
+    width: 100%;
+    background-color: black;
+    z-index: 1;
+}
+
+
+@media screen and (max-width:600px){
+    .title h1{
+        font-size:4rem !important;
     }
-    .title{
-        width: 90%;
+    #info p {
+        font-size: 14px;
     }
 
-} */
-
+}
