--- a/templates/OurTeam.ejs
+++ b/templates/OurTeam.ejs
@@ -11,55 +11,33 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="fonts/icomoon/style.css">
     <link rel="stylesheet" href="/css/bootstrap/bootstrap.css">
-    <link rel="stylesheet" href="/css/jquery-ui.css">
-    <link rel="stylesheet" href="/css/jquery.fancybox.min.css">
     <link rel="stylesheet" href="/css/ourteam.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
-<style>
-    .navitem {
-        color: rgb(255, 255, 255);
-    }
-
-    .entry {
-        background: url('https://img.freepik.com/premium-photo/abstract-green-turquoise-texture-background-vintage-grunge-green-backdrop-aesthetic-creative-design_364465-203.jpg?w=1060')no-repeat center center/cover;
-        background-attachment: fixed;
-        width: 100%;
-        height: 100vh;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
-
-    .titled {
-        color: rgb(255, 255, 255);
-        font-size: 8rem;
-
-    }
-    .title{
-        font-size: 2rem;
-        text-transform: uppercase;
-    }
-</style>
-
 <body>
-    <div class="navbarposition" style="background-image: linear-gradient(to left, black,white);" ; width: 100%; z-index:
-        1;>
+    <!-- navbar section -->
+    <div class="navbarposition">
         <%- include("partials/navbar.ejs") %>
     </div>
 
+    <!-- overlay section -->
     <div class="entry">
         <div class="titled">
-            NIRMAAN-TEAM
+            NIRMAAN TEAM
         </div>
     </div>
+
     <br><br><br>
+
+    <!-- main container  -->
     <div class="sitewarp" style="padding-bottom:40px">
         <div class="cont">
+
+            <!-- setting teamwise section -->
             <% for(let team in teams){%>
                 <div class="title">
-                    <h1 style="color: black;">
+                    <h1>
                         <br>
                         <%=team%>
                     </h1>
@@ -67,6 +45,7 @@
                 <div class="hr"></div>
                 <br>
                 <div class="conti">
+                    <!-- adding member card -->
                     <% for(let i=0;i<teams[team].length;i++){%>
                         <div class="profilecard">
                             <div class="hover">
@@ -117,8 +96,8 @@
                         </div>
 
                         <%}%>
-                    </div>
-                    <br>
+                </div>
+                <br>
                 <%}%>
 
 
@@ -127,9 +106,8 @@
         </div>
     </div>
 
-
-
-    <div class="footerposition" style="position: absolute; width: 100%; background-color: black;">
+    <!-- footer section -->
+    <div class="footerposition">
         <%- include("partials/footer.ejs") %>
     </div>
 </body>
