--- a/templates/eventredirect.ejs
+++ b/templates/eventredirect.ejs
@@ -10,12 +10,9 @@
     </title>
     <!-- linking main styling file -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="fonts/icomoon/style.css">
     <link rel="stylesheet" href="/css/bootstrap/bootstrap.css">
-    <link rel="stylesheet" href="/css/jquery-ui.css">
-    <link rel="stylesheet" href="/css/jquery.fancybox.min.css">
-    <!-- <link rel="stylesheet" href="/css/events.css"> -->
+    <link rel="stylesheet" href="/css/eventsredirect.css">
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <style>
@@ -23,92 +20,41 @@
         background: url('<%=eventdata.image%>') no-repeat center center/cover;
         background-attachment: fixed;
     }
-
-    .contr {
-        background-color: rgb(0, 0, 0, 0.6);
-        min-height: 75vh;
-        width: 100%;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-
-    .title {
-        width: 100%;
-        text-align: center;
-        padding-top: 40px;
-    }
-
-    .title h1 {
-        font-size: 2.5rem;
-        text-transform: uppercase;
-    }
-
-    hr {
-        width: 80%;
-        border-top: 1px solid rgb(255, 255, 255) !important;
-    }
-
-    .info {
-        width: 100%;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-
-    }
-
-    .colr span {
-        color: white;
-        width: 100%;
-    }
-
-    .colr {
-        padding: 10px 250px;
-    }
-
-    .winner {
-        display: flex;
-        flex-direction: column;
-    }
-    .price {
-        display: flex;
-        align-items: center;
-    }
 </style>
 
 <body>
-    <div class="navbarposition" style="background-image: linear-gradient(to left, black,white);";
-    width: 100%;
-    z-index: 1;>
+    <!-- adding navbar section -->
+    <div class="navbarposition">
         <%- include("partials/navbar.ejs") %>
     </div>
 
+    <!-- adding name of particular event -->
     <div class="contr">
-        <div class="title">
+        <div class="titled">
             <h1>
                 <%=name%>
             </h1>
         </div>
-        <hr>
-
+        <!--  about the event -->
         <div class="info">
+            <hr>
             <div class="colr about">
                 <span>
                     <%=eventdata.about%>
                 </span>
             </div>
             <hr>
-
+            <!-- event price money -->
             <% if(eventdata.price){%>
                 <div class="colr price">
-                    <h4>Price Worth: &nbsp <h5><%=eventdata.price%></h5>
+                    <h4>Price Worth: &nbsp <h6>
+                            <%=eventdata.price%>
+                        </h6>
                     </h4>
                 </div>
                 <hr>
                 <%}%>
-
+                    <!-- event winners and runnerups -->
                     <% if(winnerlist.length){%>
                         <div class="colr winners">
                             <h4>Winners:</h4>
@@ -125,9 +71,8 @@
 
     </div>
 
-
-
-    <div class="footerposition" style="width: 100%; background-color: black;">
+    <!-- adding footer section -->
+    <div class="footerposition">
         <%- include("partials/footer.ejs") %>
     </div>
 </body>
