--- a/templates/partials/navbar.ejs
+++ b/templates/partials/navbar.ejs
@@ -1,9 +1,5 @@
 <link rel="stylesheet" href="/css/navbar.css">
-<style>
-  .navitem {
-    text-transform: uppercase;
-  }
-</style>
+
 <nav class="navbar navbar-expand-lg ">
   <a class="navbar-brand" href="/"><img src="/images/logo.png" alt="Nirmaan-Logo"></a>
   <div class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -27,19 +23,4 @@
   </div>
 </nav>
 
-<script>
-  let toggler = document.getElementById('line');
-  let call = document.getElementById('call');
-  let flag = true;
-  toggler.addEventListener('click',()=>{
-    console.log('click')
-    if(flag){
-      call.style.display = 'block';
-      flag = false;
-    }
-    else{
-      call.style.display = 'none';
-      flag = true;
-    }
-  })
-</script>
+<script src="/js/navbar.js"></script>
